--- a/Studis/Studis/Storyboard/Base.lproj/Main.storyboard
+++ b/Studis/Studis/Storyboard/Base.lproj/Main.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Main View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Studis" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="Studis" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -29,6 +29,9 @@
                                 <rect key="frame" x="134" y="559" width="102" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Get Next Topic"/>
+                                <connections>
+                                    <action selector="getNextTopicButtonTouched:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3Se-AT-has"/>
+                                </connections>
                             </button>
                             <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gaL-St-bMu">
                                 <rect key="frame" x="0.0" y="334" width="375" height="162"/>
@@ -46,6 +49,9 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="areaPickerView" destination="gaL-St-bMu" id="Jz9-Y1-5ke"/>
+                        <outlet property="getNextTopicButton" destination="RIC-Kl-tOq" id="n0D-Bw-3Hb"/>
+                        <outlet property="selectedTopicNameLabel" destination="M0S-sZ-V4n" id="Gmh-vW-9nk"/>
                         <segue destination="wPt-Tw-xh0" kind="show" id="6lu-Md-LMv"/>
                         <segue destination="23U-by-qLa" kind="show" id="fCx-JD-vmG"/>
                     </connections>
@@ -54,10 +60,10 @@
             </objects>
             <point key="canvasLocation" x="1394" y="-218"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Topics List Table View Controller-->
         <scene sceneID="srU-cT-Yad">
             <objects>
-                <tableViewController id="QJf-3K-mjc" sceneMemberID="viewController">
+                <tableViewController id="QJf-3K-mjc" customClass="TopicsListTableViewController" customModule="Studis" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="ABI-0O-gTl">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -88,7 +94,7 @@
         <!--Title-->
         <scene sceneID="LvQ-RI-5yY">
             <objects>
-                <viewController id="23U-by-qLa" sceneMemberID="viewController">
+                <viewController id="23U-by-qLa" customClass="TopicViewController" customModule="Studis" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ayi-Cw-DfT">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -98,7 +104,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             </pickerView>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Topic Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bg1-hI-eDM">
-                                <rect key="frame" x="58" y="121" width="246" height="30"/>
+                                <rect key="frame" x="59" y="121" width="246" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -111,6 +117,10 @@
                     <navigationItem key="navigationItem" title="Title" id="g90-0V-e3h">
                         <barButtonItem key="rightBarButtonItem" title="Save" id="jbu-fM-hH3"/>
                     </navigationItem>
+                    <connections>
+                        <outlet property="areaPickerView" destination="ejd-nu-Pqc" id="BpL-uN-lbz"/>
+                        <outlet property="topicNameTextField" destination="bg1-hI-eDM" id="W6R-tb-VVT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="h6d-D8-yYa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -137,7 +147,7 @@
         <!--Title-->
         <scene sceneID="NKH-di-Aox">
             <objects>
-                <viewController id="wPt-Tw-xh0" sceneMemberID="viewController">
+                <viewController id="wPt-Tw-xh0" customClass="AreaViewController" customModule="Studis" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ypw-UU-rDk">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -156,6 +166,9 @@
                     <navigationItem key="navigationItem" title="Title" id="QOA-sA-TNx">
                         <barButtonItem key="rightBarButtonItem" title="Save" id="RnJ-1Q-tzy"/>
                     </navigationItem>
+                    <connections>
+                        <outlet property="areaNameTextField" destination="1RL-vb-2MB" id="Hux-4l-aXd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Way-Yn-rG9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
