--- a/Studis/Studis/Storyboard/Base.lproj/Main.storyboard
+++ b/Studis/Studis/Storyboard/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aZe-0y-NTy">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -30,7 +30,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Get Next Topic"/>
                                 <connections>
-                                    <action selector="getNextTopicButtonTouched:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3Se-AT-has"/>
+                                    <action selector="didTouchGetNextTopicButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6ek-Um-27t"/>
                                 </connections>
                             </button>
                             <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gaL-St-bMu">
@@ -42,9 +42,14 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="YDv-MD-Drq">
+                        <barButtonItem key="leftBarButtonItem" title="Add" id="tSk-8c-ZVJ">
+                            <connections>
+                                <action selector="didTouchAddButton:" destination="BYZ-38-t0r" id="cAl-Il-7ui"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Topics" id="Zju-bK-ws9">
                             <connections>
-                                <segue destination="QJf-3K-mjc" kind="show" id="sCN-AG-GQe"/>
+                                <segue destination="QJf-3K-mjc" kind="show" id="f2u-3K-DeR"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -52,8 +57,8 @@
                         <outlet property="areaPickerView" destination="gaL-St-bMu" id="Jz9-Y1-5ke"/>
                         <outlet property="getNextTopicButton" destination="RIC-Kl-tOq" id="n0D-Bw-3Hb"/>
                         <outlet property="selectedTopicNameLabel" destination="M0S-sZ-V4n" id="Gmh-vW-9nk"/>
-                        <segue destination="wPt-Tw-xh0" kind="show" id="6lu-Md-LMv"/>
-                        <segue destination="23U-by-qLa" kind="show" id="fCx-JD-vmG"/>
+                        <segue destination="wPt-Tw-xh0" kind="show" identifier="addArea" id="6lu-Md-LMv"/>
+                        <segue destination="23U-by-qLa" kind="show" identifier="addTopic" id="fCx-JD-vmG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -69,12 +74,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="KOA-e5-omR">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="topicCell" textLabel="iyw-MM-l8X" style="IBUITableViewCellStyleDefault" id="KOA-e5-omR">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KOA-e5-omR" id="NPJ-oR-11N">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="iyw-MM-l8X">
+                                            <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                 </tableViewCellContentView>
                                 <connections>
                                     <segue destination="23U-by-qLa" kind="show" id="kDA-0R-mTl"/>
@@ -91,7 +105,7 @@
             </objects>
             <point key="canvasLocation" x="2239" y="160"/>
         </scene>
-        <!--Title-->
+        <!--New Topic-->
         <scene sceneID="LvQ-RI-5yY">
             <objects>
                 <viewController id="23U-by-qLa" customClass="TopicViewController" customModule="Studis" customModuleProvider="target" sceneMemberID="viewController">
@@ -114,7 +128,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="HjF-Jp-zsQ"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="g90-0V-e3h">
+                    <navigationItem key="navigationItem" title="New Topic" id="g90-0V-e3h">
                         <barButtonItem key="rightBarButtonItem" title="Save" id="jbu-fM-hH3">
                             <connections>
                                 <action selector="didTouchSaveButton:" destination="23U-by-qLa" id="a6D-rB-xFT"/>
@@ -148,7 +162,7 @@
             </objects>
             <point key="canvasLocation" x="612.79999999999995" y="98.950524737631198"/>
         </scene>
-        <!--Title-->
+        <!--New Area-->
         <scene sceneID="NKH-di-Aox">
             <objects>
                 <viewController id="wPt-Tw-xh0" customClass="AreaViewController" customModule="Studis" customModuleProvider="target" sceneMemberID="viewController">
@@ -167,7 +181,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="aUw-HU-EvJ"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="QOA-sA-TNx">
+                    <navigationItem key="navigationItem" title="New Area" id="QOA-sA-TNx">
                         <barButtonItem key="rightBarButtonItem" title="Save" id="RnJ-1Q-tzy">
                             <connections>
                                 <action selector="didTouchSaveButton:" destination="wPt-Tw-xh0" id="CZf-XT-5Kl"/>
@@ -184,6 +198,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="fCx-JD-vmG"/>
+        <segue reference="kDA-0R-mTl"/>
     </inferredMetricsTieBreakers>
 </document>
