--- a/Studis/Studis/Storyboard/Base.lproj/Main.storyboard
+++ b/Studis/Studis/Storyboard/Base.lproj/Main.storyboard
@@ -47,7 +47,7 @@
                                 <action selector="didTouchAddButton:" destination="BYZ-38-t0r" id="cAl-Il-7ui"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="Topics" id="Zju-bK-ws9">
+                        <barButtonItem key="rightBarButtonItem" title="Topics and Areas" id="Zju-bK-ws9">
                             <connections>
                                 <segue destination="QJf-3K-mjc" kind="show" id="f2u-3K-DeR"/>
                             </connections>
@@ -91,7 +91,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="23U-by-qLa" kind="show" id="kDA-0R-mTl"/>
+                                    <segue destination="23U-by-qLa" kind="show" identifier="editCell" id="kDA-0R-mTl"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -100,6 +100,20 @@
                             <outlet property="delegate" destination="QJf-3K-mjc" id="fgR-Br-jKJ"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="CpG-YK-f5l">
+                        <nil key="title"/>
+                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="u7Z-Bp-pMX">
+                            <rect key="frame" x="127" y="7" width="121" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <segments>
+                                <segment title="Topics"/>
+                                <segment title="Areas"/>
+                            </segments>
+                            <connections>
+                                <action selector="didChangeSegmentedControl:" destination="QJf-3K-mjc" eventType="valueChanged" id="Prk-Fv-HKw"/>
+                            </connections>
+                        </segmentedControl>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G5Q-IZ-V06" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
