--- a/Studis/Studis/Storyboard/Base.lproj/Main.storyboard
+++ b/Studis/Studis/Storyboard/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aZe-0y-NTy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14105" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aZe-0y-NTy">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -144,8 +144,22 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b5o-oY-4fB">
+                                <rect key="frame" x="112.5" y="577" width="150" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="Oci-pX-brT"/>
+                                </constraints>
+                                <state key="normal" title="Add Review Session"/>
+                                <connections>
+                                    <action selector="didTouchAddReviewSession:" destination="23U-by-qLa" eventType="touchUpInside" id="ylH-Sh-CUB"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="b5o-oY-4fB" firstAttribute="centerX" secondItem="ayi-Cw-DfT" secondAttribute="centerX" id="LZ3-6H-mI8"/>
+                            <constraint firstItem="HjF-Jp-zsQ" firstAttribute="bottom" secondItem="b5o-oY-4fB" secondAttribute="bottom" constant="60" id="NaQ-70-n3a"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="HjF-Jp-zsQ"/>
                     </view>
                     <navigationItem key="navigationItem" title="Topic" id="g90-0V-e3h">
@@ -156,6 +170,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="addSessionButton" destination="b5o-oY-4fB" id="PFh-4Z-LLf"/>
                         <outlet property="areaPickerView" destination="ejd-nu-Pqc" id="BpL-uN-lbz"/>
                         <outlet property="topicNameTextField" destination="bg1-hI-eDM" id="W6R-tb-VVT"/>
                     </connections>
